refactor but still hasn't end condition

--- a/todo
+++ b/todo
@@ -1,4 +1,4 @@
-need to game end conditions.
+--> need to game end conditions.
 need to add score for the game how much food snake consume.
 multiple levels.
 movable obstacle.
